--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
 html {
   font-family: 'Noto Serif', serif;
 }
+
+header {
+  background-color: #70ad55;
+  color: #fff;
+}
+
+body {
+  margin: 0;
+}
