Format footer and other elements

--- a/css/main.css
+++ b/css/main.css
@@ -24,3 +24,14 @@ select {
 hr {
   border: solid 1px #70ad55;
 }
+
+.btn {
+  padding: 10px 45px;
+  background-color: #6e8c62;
+  border: none;
+}
+
+footer {
+  background-color: #70ad55;
+  color: #fff;
+}
